--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,32 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="Footer.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+    <!-- appling favicon -->
+    <link rel="icon" href="https://assets.pharmeasy.in/apothecary/images/favicon.png">
+    <title>PharmEasy: Online Pharmacy & Medical Store in India</title>
+    
+    <!-- appliying google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- appling slick slider -->
+    <!-- slick-theme.min.css -->
+    <link rel="stylesheet" href="./Styles/slick-theme.css">
+    <!-- slick min.css -->
+     <link rel="stylesheet" href="./Styles/slick.css">
+
+    <!-- linking  index.css -->
+    <link rel="stylesheet" href="./Styles/index.css">
+    <!-- linking foooter css -->
+    <link rel="stylesheet" href="./Styles/footer.css">
+    <!-- linking  header.css -->
+    <link rel="stylesheet" href="./Header/header.css">
+    <!-- linking  header.js -->
+    <script type="module" src="./Script/index.js"> </script>
     <title>React App</title>
   </head>
   <body>
